--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongoose": "^8.6.3",
-    "mongoose-auto-increment": "^5.0.1"
+    "mongoose": "^8.6.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.5"
